--- a/src/Pages/Login/Register/Register.css
+++ b/src/Pages/Login/Register/Register.css
@@ -2,11 +2,18 @@
     margin: 0 auto;
     width: 50%;
 }
-.register-form input{
+.register-form input:not([type=checkbox]){
     display: block;
     width: 100%;
+    border: 1px solid lightgray;
+    border-radius: 10px;
     height: 50px;
     padding-left: 10px;
     font-size: 18px;
     margin-bottom: 15px;
+}
+
+#register:hover {
+    background-color: goldenrod;
+    color: white;
 }
